--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page Добавляйте такие фрагменты для каждой страницы -->
     <include src="./partials/image-search.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/load-more-btn.html"></include>
   </body>
 </html>
